@@ -2,12 +2,13 @@ package com.sigmundgranaas.forgero.core.toolpart.factory;
 
 import com.sigmundgranaas.forgero.core.ForgeroRegistry;
 import com.sigmundgranaas.forgero.core.gem.EmptyGem;
-import com.sigmundgranaas.forgero.core.identifier.tool.ForgeroToolPartHeadIdentifier;
 import com.sigmundgranaas.forgero.core.identifier.tool.ForgeroToolPartIdentifier;
 import com.sigmundgranaas.forgero.core.material.MaterialCollection;
 import com.sigmundgranaas.forgero.core.material.material.EmptySecondaryMaterial;
 import com.sigmundgranaas.forgero.core.material.material.PrimaryMaterial;
-import com.sigmundgranaas.forgero.core.tool.ForgeroToolTypes;
+import com.sigmundgranaas.forgero.core.pattern.HeadPattern;
+import com.sigmundgranaas.forgero.core.pattern.Pattern;
+import com.sigmundgranaas.forgero.core.pattern.PatternCollection;
 import com.sigmundgranaas.forgero.core.toolpart.ForgeroToolPart;
 import com.sigmundgranaas.forgero.core.toolpart.binding.Binding;
 import com.sigmundgranaas.forgero.core.toolpart.binding.BindingState;
@@ -36,39 +37,40 @@ public class ForgeroToolPartFactoryImpl implements ForgeroToolPartFactory {
     public @NotNull
     ForgeroToolPart createToolPart(@NotNull ForgeroToolPartIdentifier identifier) {
         PrimaryMaterial material = (PrimaryMaterial) ForgeroRegistry.getInstance().materialCollection().getMaterial(identifier.getMaterial());
+        Pattern pattern = ForgeroRegistry.getInstance().patternCollection().getPatterns().stream().filter((Pattern element) -> element.getPatternIdentifier().equals(identifier.getPattern().identifier())).findFirst().get();
 
         return switch (identifier.getToolPartType()) {
-            case HEAD -> createToolPartHead(identifier, material);
-            case HANDLE -> new Handle(new HandleState(material, new EmptySecondaryMaterial(), EmptyGem.createEmptyGem()));
-            case BINDING -> new Binding(new BindingState(material, new EmptySecondaryMaterial(), EmptyGem.createEmptyGem()));
+            case HEAD -> createToolPartHead(material, (HeadPattern) pattern);
+            case HANDLE -> new Handle(new HandleState(material, new EmptySecondaryMaterial(), EmptyGem.createEmptyGem(), pattern));
+            case BINDING -> new Binding(new BindingState(material, new EmptySecondaryMaterial(), EmptyGem.createEmptyGem(), pattern));
         };
     }
 
-    private ToolPartHead createToolPartHead(@NotNull ForgeroToolPartIdentifier identifier, PrimaryMaterial material) {
-        return switch (((ForgeroToolPartHeadIdentifier) identifier).getHeadType()) {
-            case PICKAXE -> new PickaxeHead(new HeadState(material, new EmptySecondaryMaterial(), EmptyGem.createEmptyGem()));
-            case SHOVEL -> new ShovelHead(new HeadState(material, new EmptySecondaryMaterial(), EmptyGem.createEmptyGem()));
-            case AXE -> new AxeHead(new HeadState(material, new EmptySecondaryMaterial(), EmptyGem.createEmptyGem()));
+    private ToolPartHead createToolPartHead(PrimaryMaterial material, @NotNull HeadPattern pattern) {
+        return switch (pattern.getToolType()) {
+            case PICKAXE -> new PickaxeHead(new HeadState(material, new EmptySecondaryMaterial(), EmptyGem.createEmptyGem(), pattern));
+            case SHOVEL -> new ShovelHead(new HeadState(material, new EmptySecondaryMaterial(), EmptyGem.createEmptyGem(), pattern));
+            case AXE -> new AxeHead(new HeadState(material, new EmptySecondaryMaterial(), EmptyGem.createEmptyGem(), pattern));
             case SWORD -> null;
         };
     }
 
     @Override
     public @NotNull
-    ToolPartHeadBuilder createToolPartHeadBuilder(@NotNull PrimaryMaterial material, ForgeroToolTypes type) {
-        return new ToolPartHeadBuilder(material, type);
+    ToolPartHeadBuilder createToolPartHeadBuilder(@NotNull PrimaryMaterial material, HeadPattern pattern) {
+        return new ToolPartHeadBuilder(material, pattern);
     }
 
     @Override
     public @NotNull
-    ToolPartHandleBuilder createToolPartHandleBuilder(@NotNull PrimaryMaterial material) {
-        return new ToolPartHandleBuilder(material);
+    ToolPartHandleBuilder createToolPartHandleBuilder(@NotNull PrimaryMaterial material, @NotNull Pattern pattern) {
+        return new ToolPartHandleBuilder(material, pattern);
     }
 
     @Override
     public @NotNull
-    ToolPartBindingBuilder createToolPartBindingBuilder(@NotNull PrimaryMaterial material) {
-        return new ToolPartBindingBuilder(material);
+    ToolPartBindingBuilder createToolPartBindingBuilder(@NotNull PrimaryMaterial material, @NotNull Pattern pattern) {
+        return new ToolPartBindingBuilder(material, pattern);
     }
 
     @Override
@@ -84,17 +86,34 @@ public class ForgeroToolPartFactoryImpl implements ForgeroToolPartFactory {
 
     @Override
     public @NotNull
-    List<ForgeroToolPart> createBaseToolParts(@NotNull MaterialCollection collection) {
-        return collection.getPrimaryMaterialsAsList().stream().map(this::createBaseToolPartsFromMaterial).flatMap(List::stream).collect(Collectors.toList());
+    List<ForgeroToolPart> createBaseToolParts(@NotNull MaterialCollection collection, PatternCollection patternCollection) {
+        return collection
+                .getPrimaryMaterialsAsList()
+                .stream()
+                .map(material -> patternCollection
+                        .getPatterns()
+                        .stream()
+                        .map(pattern -> createBaseToolPartsFromMaterial(material, pattern))
+                        .flatMap(List::stream).toList())
+                .flatMap(List::stream)
+                .collect(Collectors.toList());
     }
 
-    private List<ForgeroToolPart> createBaseToolPartsFromMaterial(PrimaryMaterial material) {
+    private List<ForgeroToolPart> createBaseToolPartsFromMaterial(PrimaryMaterial material, Pattern pattern) {
         List<ForgeroToolPart> toolParts = new ArrayList<>();
-        toolParts.add(new Handle(new HandleState(material, new EmptySecondaryMaterial(), EmptyGem.createEmptyGem())));
-        toolParts.add(new PickaxeHead(new HeadState(material, new EmptySecondaryMaterial(), EmptyGem.createEmptyGem())));
-        toolParts.add(new AxeHead(new HeadState(material, new EmptySecondaryMaterial(), EmptyGem.createEmptyGem())));
-        toolParts.add(new ShovelHead(new HeadState(material, new EmptySecondaryMaterial(), EmptyGem.createEmptyGem())));
-        toolParts.add(new Binding(new BindingState(material, new EmptySecondaryMaterial(), EmptyGem.createEmptyGem())));
+        switch (pattern.getType()) {
+            case HEAD -> {
+                switch (((HeadPattern) pattern).getToolType()) {
+                    case AXE -> toolParts.add(new AxeHead(new HeadState(material, new EmptySecondaryMaterial(), EmptyGem.createEmptyGem(), pattern)));
+                    case SHOVEL -> toolParts.add(new ShovelHead(new HeadState(material, new EmptySecondaryMaterial(), EmptyGem.createEmptyGem(), pattern)));
+                    case PICKAXE -> toolParts.add(new PickaxeHead(new HeadState(material, new EmptySecondaryMaterial(), EmptyGem.createEmptyGem(), pattern)));
+                    default -> {
+                    }
+                }
+            }
+            case HANDLE -> toolParts.add(new Handle(new HandleState(material, new EmptySecondaryMaterial(), EmptyGem.createEmptyGem(), pattern)));
+            case BINDING -> toolParts.add(new Binding(new BindingState(material, new EmptySecondaryMaterial(), EmptyGem.createEmptyGem(), pattern)));
+        }
         return toolParts;
     }
 }
